--- a/Changes
+++ b/Changes
@@ -6,6 +6,9 @@ Revision history for Perl extension Dist-Zilla-LocaleTextDomain
        Joenio Costa for the patch.
      - Added a note on how to get Locale::TextDomain to return character
        strings instead of byte strings.
+     - Fixed failing tets by skipping them when the installed versions of
+       `xgettext` or `msgfmt` are too old (currently determined if they do not
+       recognoze the `--version` option).
 
 0.81  2012-10-02T16:25:43Z
       - Removed tests for the `add_lang` command, which was never shipped,
