--- a/Changes
+++ b/Changes
@@ -3,6 +3,9 @@ Revision history for Perl extension Dist-Zilla-LocaleTextDomain
 0.84
      - Changed some logging output to be prefixed with `[LocalTextDomain]`
        rather than `[DZ]`.
+     - Added the `msg-compile` command, which allows one to arbitrarily
+       compile one or more language catalogs. This should be useful for
+       translators who want to test a catalog as they translate it.
 
 0.83  2012-12-04T23:54:12Z
      - Added improved failure message when GNU gettext cannot be found, as
