--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension Dist-Zilla-LocaleTextDomain
 
 0.88
+     - Updated docs to reflect proper ShareDir support in Locale::TextDomain
+       v1.21 and higher.
+     - Various documentation corrections.
 
 0.87  2013-11-24T04:46:40Z
      - Updated file gathering to suport Dist::Zilla 5.0's improved character
