--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension Dist-Zilla-LocaleTextDomain
 
-0.88
+0.90
      - Updated docs to reflect proper ShareDir support in Locale::TextDomain
        v1.21 and higher.
      - Various documentation corrections.
@@ -9,8 +9,7 @@ Revision history for Perl extension Dist-Zilla-LocaleTextDomain
        now will be extracted from files below `lib/` and the files in the
        directory configured for the `ExecDir` plug-in (if loaded). Edit the
        `finder` attribute in the `LocaleTextDomain` section of `dist.ini` to
-       change this behiavior. Thanks to "perlancar" for the patch!
-
+       change this behiavior. Thanks to Manfred Stock for the patch!
 
 0.87  2013-11-24T04:46:40Z
      - Updated file gathering to suport Dist::Zilla 5.0's improved character
